bug#0000458: View page should have action items beside each graph improved html structure of view page and improved CSS wrapping of graphs. setup CSS hack for IE to allow the images to still center but throw the new controls to the left.

--- a/www/webfiles/include/netmrg.css
+++ b/www/webfiles/include/netmrg.css
@@ -359,33 +359,43 @@ A.editfield1, A:visited.editfield1
 	font-size : 0.5em;
 	font-weight : bold;
 	letter-spacing : 0.2em;
+	margin: 0 auto; /* center for standards-compliant browsers */
 	padding : 5px;
-	padding-right : 18px;
-	text-align : left;
-	border : 1px solid #E0E0E0;
-	width: 700px;
-	margin-left : auto;
-	margin-right : auto;
+	text-align: left; /* undo the centering hack for IE */
+	display: table;
+	-display: inline;
 }
 
 .viewseparator
 {
 	background-color : #D0D0D0;
 	color : #505050;
-	font-family : sans-serif;
-	font-size : 12px;
-	font-weight : bold;
-	letter-spacing : 0.2em;
 	padding : 1px;
-	padding-left : 10px;
 	text-align : left;
 	border-top : 1px dashed #4040B0;
 	border-bottom : 1px dashed #4040B0;
 }
 
-.viewgraph-shortcut
+.viewgraph-title
+{
+	font-family : sans-serif;
+	font-size : 12px;
+	font-weight : bold;
+	letter-spacing : 0.2em;
+}
+
+.viewgraph-controls
 {
 	float: right;
+}
+
+.viewgraph-shortcut
+{
+}
+
+.viewgraph-image
+{
+	margin: 5px 25px 5px 5px;
 }
 
 .disabled
